--- a/style.css
+++ b/style.css
@@ -4,23 +4,13 @@ html {
 }
 
 body {
-  font-family: helvetica, arial;
+  font-family: robot, helvetica, arial, verdana;
 }
 
 a {
   text-decoration: none;
   color: #000;
 }
-
-/* app styles */
-/*header {
-  height: 85px;
-  background: #fff;
-  border-bottom: 2px solid black;
-  box-shadow: 0px 1px 50px #5E5E5E;
-  position:fixed;
-  top:0px;
-}*/
 
 header div {
   width: 100%;
@@ -30,6 +20,7 @@ header div {
   box-shadow: 0px 1px 50px #5E5E5E;
   padding: 0px 0px 5px 0px;
   position: fixed;
+  z-index: 99;
   top: 0px;
 }
 
@@ -54,6 +45,25 @@ main {
 main img {
   width: 100%;
   margin: 0px auto;
+  position: relative;
+}
+
+main section span {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+main section button {
+  background: rgba(17, 17, 56, 0.8);
+  color: white;
+  border-radius: 25px;
+  font-size: 46px;
+  padding: 10px 20px 10px 20px;
+
+
 }
 
 main h3 {
@@ -67,6 +77,7 @@ main h3 {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 
 #about h3 {
   margin-top: 16px;
@@ -100,7 +111,8 @@ main h3 {
 }
 
 #content {
+  height: 250px;
   margin-top: 49px;
   background: black;
-  color: white;
+  color: orange;
 }
