added stylistic css

--- a/sales-style.css
+++ b/sales-style.css
@@ -1,5 +1,11 @@
+table {
+  font-family: helvetica, arial, verdana;
+  font-size: 14px;
+  text-align: center;
+}
+
 thead {
-  background: gray;
+  background: #d3d3d3;
 }
 
 td {
