--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* global styles */
 html {
-  background: black;
+  background: white;
 }
 
 body {
-  font-family: robot, helvetica, arial, verdana;
+  font-family: roboto, helvetica, arial, verdana;
 }
 
 a {
@@ -42,7 +42,7 @@ main {
   margin: 0px auto;
 }
 
-main img {
+main section img {
   width: 100%;
   margin: 0px auto;
   position: relative;
@@ -56,21 +56,66 @@ main section span {
   text-align: center;
 }
 
+.sub-box {
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  padding: 20px 0 20px 0;
+  font-family: helvetica;
+  color: white;
+  background: rgba(0, 0, 0, 0.8);
+
+}
+
+main ul {
+  width: 960px;
+  margin: 30px auto;
+}
+
+.sub-banners {
+  margin-top: 30px;
+}
+
+.sub-banners li {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  float: left;
+  margin-right: 30px;
+}
+
+.sub-banners li:nth-child(3) {
+  margin-right: 0;
+}
+
+main section li img {
+  position: relative;
+}
+
 main section button {
   background: rgba(17, 17, 56, 0.8);
   color: white;
   border-radius: 25px;
   font-size: 46px;
   padding: 10px 20px 10px 20px;
-
-
 }
+
+
+
 
 main h3 {
     font-size: 44px;
     text-align: center;
+    margin: 30px 0px 30px 0px;
 }
 
+p {
+  margin-left: 90px;
+  margin-right: 90px;
+}
+
+
+/*
 .article-content {
   width: 100%;
   height: 200px;
@@ -114,4 +159,8 @@ main h3 {
   margin-top: 49px;
   background: black;
   color: white;
+}*/
+
+.clearfix {
+  clear: both;
 }
