--- a/table-style.css
+++ b/table-style.css
@@ -1,11 +1,25 @@
 /* base styles */
 
 body {
-  font-family: helvetica;
+  font-family: roboto helvetica;
+}
+
+.main-form-input {
+  position: fixed;
+  top: 0;
+  background: white;
+  width: 100%;
+  height: 100px;
+  box-shadow: 0px 1px 50px #5E5E5E;
 }
 
 fieldset {
-  padding: 20px;
+  padding: 10px;
+  margin-left: 10px;
+}
+
+.questions {
+  float: left;
 }
 
 /* any input with a type of "text"; bracket says, "any attribute" */
@@ -25,28 +39,28 @@ input[type="number"] {
 
 /* pseudo selector */
 input[type="text"]:focus {
-  background: #000;
-  color: #fff;
+  background: #dcdcdc;
+  color: #black;
 }
 
 input[type="number"]:focus {
-  background: #000;
-  color: #fff;
+  background: #dcdcdc;
+  color: #black;
 }
 
 button {
-  margin-left: 20px;
-  margin-bottom: 20px;
+  display: block;
+  margin-top: 9px;
   border: none;
-  padding: 8px 18px;
-  background: black;
-  color: #fff;
+  background: #dcdcdc;
+  color: black;
   border-radius: 3px;
-  cursor: pointer; /* call to action - looks like a hand when above it */
-  font-size: 20px;
+  cursor: pointer;
+  font-size: 22px;
 }
 
 table {
+  margin-top: 150px;
   margin-left: 20px;
   font-size: 14px;
   text-align: center;
@@ -59,4 +73,8 @@ thead {
 td {
   padding: 10px;
   border: solid 1px #000;
+}
+
+.clearfix {
+  clear: both;
 }
